# hls-multiagent

./: .env.example  .gitignore  README.md  WALKTHROUGH.md  app.yaml  databricks.yml  pyproject.toml  test_agent.py
agent_server/: agent.py  prompts.py  start_server.py  tools_hls.py  utils.py  utils_memory.py
notebooks/: Deploy_supply_chain_genies.py  Generate_supply_chain_tables.py  Notebook_supervisor_v1.7.py  Vector_Search_Base_Data_1.4.py  analyze_data_lakebase.py  config.yaml  deploy_model_serving.py  descriptors.py  lb_state_manager.py  message_converters.py  setup_lakebase_project.py  setup_uc_function.py  setup_zinc_vector_search.py
notebooks/Synthetic_Data/: Table_Setup.py
scripts/: patch_frontend.py  start_app.py
