[project]
name = "hls-multiagent-v3"
version = "0.1.0"
description = "HLS Research Supervisor - LangGraph agent with Lakebase memory and ZINC chemical search"
readme = "README.md"
authors = [
    { name = "Sean Zhang", email = "sean.zhang@databricks.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain[memory]>=0.17.0",
    "databricks-ai-bridge[agent-server]>=0.18.0",
    "databricks-sdk>=0.79.0",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.1",
    "langgraph>=1.0.9",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "databricks-vectorsearch",
    "rdkit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server", "scripts"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]

setup = [
    "ruamel.yaml>=0.18.0",
]

[tool.uv]
default-groups = ["dev", "setup"]

[tool.pytest.ini_options]
base_url = "http://localhost:8000"
addopts = "-n 7"

[project.scripts]
start-server = "agent_server.start_server:main"
start-app = "scripts.start_app:main"
